--- a/.travis.yml
+++ b/.travis.yml
@@ -135,12 +135,23 @@ matrix:
     #   python: nightly
     #   script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
-    - name: "SymPy1.2, Ubuntu Linux Bionic Python 3.6.7"
+    - name: "SymPy1.2, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported)"
       os: linux
       dist: bionic
-      python: 3.6.7
-      before_script: pip install sympy==1.2
+      python: 2.7.18
+      before_script: pip install sympy==1.2 # NRPy+ UnitTesting requires at least sympy 1.3
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
+
+    - name: "JUPYTER NOTEBOOK TEST: SymPy-1.2 Ubuntu Linux Bionic Python 3.8.3"
+      os: linux
+      dist: bionic
+      python: 3.8.3
+      sudo: true
+      install:
+        - sudo apt-get -y install texlive-latex-base pandoc colordiff
+        - pip install mpmath jupyter matplotlib scipy
+        - pip install sympy==1.2
+      script: ./UnitTesting/core_Jupyter_notebook_testsuite.sh
 
     - name: "Ubuntu Linux Bionic Python 3.7.1"
       os: linux
