--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
       os: linux
       dist: bionic
       python: 2.7.18
-      before_script: pip install sympy==1.2 mpmath # NRPy+ UnitTesting requires at least sympy 1.3
+      before_script: pip install sympy==1.2 mpmath testfixtures # SymPy 1.2 is not compatible with Python 3.8+ (maybe earlier python3 as well)
       script: ./UnitTesting/run_NRPy_UnitTests.sh python2
 
     - name: "JUPYTER NOTEBOOK TESTS SymPy-dev Ubuntu Linux Bionic Python 3.8.3"
