--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ language: python
 
 matrix:
   include:
-    - name: "SymPy1.2, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported)"
+    - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
       os: linux
       dist: bionic
       python: 2.7.18
-      before_script: pip install sympy==1.2 mpmath testfixtures # SymPy 1.2 is not compatible with Python 3.8+ (maybe earlier python3 as well)
+      before_script: pip install sympy==1.2 mpmath testfixtures # SymPy <1.3 is incompatible with NRPy+ UnitTesting
       script: ./UnitTesting/run_NRPy_UnitTests.sh python2
 
     - name: "JUPYTER NOTEBOOK TESTS SymPy-dev Ubuntu Linux Bionic Python 3.8.3"
