--- a/.pylintrc
+++ b/.pylintrc
@@ -60,7 +60,8 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=superfluous-parens,         # ADDED
+disable=undefined-variable,         # ADDED, hesitantly due to many false positives
+        superfluous-parens,         # ADDED
         not-callable,               # ADDED
         missing-module-docstring,   # ADDED
         missing-function-docstring, # ADDED
