--- a/.pylintrc
+++ b/.pylintrc
@@ -23,7 +23,7 @@ ignore-patterns=
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use.
-jobs=0
+jobs=1
 
 # Control the amount of potential inferred values when inferring a single
 # object. This can help the performance when dealing with large functions or
@@ -63,6 +63,7 @@ confidence=
 # --disable=W".
 disable=too-many-arguments,redefined-outer-name,wrong-import-position,too-many-locals,too-many-branches,multiple-imports,too-many-statements,multiple-statements,too-many-lines,too-many-nested-blocks, # ADDED
         consider-using-enumerate,singleton-comparison, # ADDED, with hesitation since some might be good suggestions, but far too many false positives
+        eval-used,                  # ADDED
         duplicate-code,             # ADDED
         import-outside-toplevel,    # ADDED
         wrong-import-order,         # ADDED
