--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,10 @@ matrix:
         - pip install sympy==1.2
       script: ./UnitTesting/core_Jupyter_notebook_testsuite.sh
 
-    - name: "SymPy-dev Ubuntu Linux Xenial pypy3.5-6.0 (only NRPy+ UnitTesting tests with sympy-dev)"
+    - name: "SymPy-dev Ubuntu Linux Xenial pypy3 (only NRPy+ UnitTesting tests with sympy-dev)"
       os: linux
       dist: xenial
-      python: pypy3.5-6.0
+      python: pypy3
       install:
         - pip install mpmath testfixtures
         - pip install -U git+https://github.com/sympy/sympy/
