--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,7 +12,6 @@ blocks:
           commands:
             - pip install -U pip setuptools
             - pip install sympy==1.3 mpmath testfixtures
-            - ls ~/
-            - echo hi
-            - ls
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
             - ./UnitTesting/run_NRPy_UnitTests.sh python2
