--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,10 +5,21 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
+  - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Xenial CPython 2.7 (Python 2.7 + latest stable SymPy)"
+    task:
+      jobs:
+        - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Xenial CPython 2.7 (Python 2.7 + latest stable SymPy)"
+          commands:
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff
+            - pip install -U pip setuptools
+            - pip install testfixtures sympy mpmath jupyter matplotlib scipy
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
   - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
     task:
       jobs:
-        - name: Run some code
+        - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
           commands:
             - pip install -U pip setuptools
             - pip install sympy==1.3 mpmath testfixtures
