--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,11 +5,11 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Xenial CPython 2.7 (Python 2.7 + latest stable SymPy)"
+  - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 2.7 (Python 2.7 + latest stable SymPy)"
     dependencies: []
     task:
       jobs:
-        - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Xenial CPython 2.7 (Python 2.7 + latest stable SymPy)"
+        - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 2.7 (Python 2.7 + latest stable SymPy)"
           commands:
             - sudo apt-get update
             - sudo apt-get -y install texlive-latex-base pandoc colordiff
@@ -30,3 +30,25 @@ blocks:
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/run_NRPy_UnitTests.sh python2
+  - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+    dependencies: []
+    task:
+      jobs:
+        - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+          commands:
+            - pip3 install -U pip setuptools
+            - pip3 install sympy mpmath testfixtures
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/run_NRPy_UnitTests.sh python3
+  - name: "SymPy-dev, Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+    dependencies: []
+    task:
+      jobs:
+        - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+          commands:
+            - pip3 install -U pip setuptools mpmath testfixtures
+            - pip3 install pip install -U git+https://github.com/sympy/sympy/
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/run_NRPy_UnitTests.sh python3
