--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,12 +12,13 @@ blocks:
         - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 2.7 (Python 2.7 + latest stable SymPy)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip install -U pip setuptools
             - pip install testfixtures sympy mpmath jupyter matplotlib scipy
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
+            - gcc --version
             - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
   - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
     dependencies: []
