--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,6 +16,7 @@ blocks:
       jobs:
         - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
           commands:
+            - sem-version python 3.8
             - sudo apt-get update
             - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
             - export PATH=$PATH:/home/semaphore/.local/bin
@@ -23,7 +24,6 @@ blocks:
             - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
-            - gcc --version
             - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
   - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
     dependencies: []
