.travis.yml: Don't use latest pypy3.6. Opt for older version in hopes it's compatible with scipy. Also install numpy first

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
     - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal (20.04) pypy 3.6 (pypy3 + latest stable SymPy)"
       os: linux
       dist: focal
-      python: pypy3.6
+      python: pypy3.6-7.3.1
       before_script: pypy3 -mpip install testfixtures
       install:
         - python --version
