.travis.yml: Don't use latest pypy3.6. Opt for older version in hopes it's compatible with scipy. Also install numpy first

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
       install:
         - python --version
         - sudo apt-get -y install texlive-latex-base pandoc colordiff
-        - sudo apt-get -y install openblas libopenblas-dev liblapack3 liblapack3-dev
+        - sudo apt-get -y install libopenblas0 libopenblas-dev "liblapack*"
         - pypy3 -mpip install numpy
         - pypy3 -mpip install scipy
         - pypy3 -mpip install sympy mpmath jupyter matplotlib
