--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ matrix:
       install:
         - pip install mpmath testfixtures
         - pip install -U git+https://github.com/sympy/sympy/
-        - pip install nrpylatex>=1.0.6
+        - pip install nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh pypy
 
     - name: "Ubuntu Linux Xenial pypy2.7-6.0 (only pypy2.7 test)"
@@ -64,7 +64,7 @@ matrix:
       dist: xenial
       python: pypy2.7-6.0
       install:
-        - pip install mpmath==1.1.0 sympy testfixtures nrpylatex>=1.0.6
+        - pip install mpmath==1.1.0 sympy testfixtures nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh pypy
 
     - name: "Ubuntu Linux Xenial pypy3.5-6.0 (only pypy3.5 test with latest stable SymPy)"
@@ -72,7 +72,7 @@ matrix:
       dist: xenial
       python: pypy3.5-6.0
       install:
-        - pip install nrpylatex>=1.0.6
+        - pip install nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh pypy3
 
     - name: "Windows Python 3.9 (only Windows test; note Travis considers Windows unsupported/experimental)"
@@ -85,7 +85,7 @@ matrix:
         - python -m ensurepip
         - python -m pip install --upgrade pip wheel
       install:
-        - pip install mpmath sympy nrpylatex>=1.0.6
+        - pip install mpmath sympy nrpylatex
       env:
         - PATH=/c/Python39:/c/Python39/Scripts:$PATH
         - PYTHONPATH=.:./UnitTesting/:$PYTHONPATH
@@ -96,7 +96,7 @@ matrix:
       language: sh
       python: 3.7
       install:
-        - pip3 install mpmath sympy nrpylatex>=1.0.6
+        - pip3 install mpmath sympy nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
     # https://docs.travis-ci.com/user/languages/python/
@@ -105,7 +105,7 @@ matrix:
       osx_image: xcode10.2  # Python 3.7.2 running on macOS 10.14.3
       language: shell       # 'language: python' is an error on Travis CI macOS
       install:
-        - pip3 install mpmath sympy nrpylatex>=1.0.6
+        - pip3 install mpmath sympy nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
     - name: "Ubuntu Linux Xenial CPython 3.4.5 (earliest Python 3 version tested)"
@@ -113,7 +113,8 @@ matrix:
       dist: trusty
       python: 3.4.5
       install:
-        - pip3 install mpmath sympy nrpylatex>=1.0.6
+        - pip3 install mpmath sympy
+        - pip3 install -U git+https://github.com/zachetienne/nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
     # According to https://github.com/tornadoweb/tornado/blob/master/.travis.yml:
@@ -125,7 +126,7 @@ matrix:
       dist: xenial
       python: 3.5.2
       install:
-        - pip3 install mpmath sympy nrpylatex>=1.0.6
+        - pip3 install mpmath sympy nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
     # Unstable at times (pip / matplotlib broken):
@@ -147,7 +148,7 @@ matrix:
       dist: bionic
       python: 2.7.18
       install:
-        - pip install mpmath sympy==1.3 testfixtures nrpylatex>=1.0.6
+        - pip install mpmath sympy==1.3 testfixtures nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh python2
 
     - name: "Ubuntu Linux Bionic Python 3.6.9 (default Python3 in Ubuntu 18.04)"
@@ -155,7 +156,7 @@ matrix:
       dist: bionic
       python: 3.6.9
       install:
-        - pip3 install mpmath sympy nrpylatex>=1.0.6
+        - pip3 install mpmath sympy nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
     - name: "Ubuntu Linux Bionic Python 3.8.3 (closest to NRPy+ core development infrastructure)"
@@ -163,5 +164,5 @@ matrix:
       dist: bionic
       python: 3.8.3
       install:
-        - pip3 install mpmath sympy nrpylatex>=1.0.6
+        - pip3 install mpmath sympy nrpylatex
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
