--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -21,7 +21,7 @@ blocks:
             - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
-            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy
+            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/core_Jupyter_notebook_testsuite_noS2F.sh
@@ -33,7 +33,7 @@ blocks:
           commands:
             - sem-version python 2.7
             - pip install -U pip setuptools
-            - pip install sympy==1.3 mpmath testfixtures
+            - pip install sympy==1.3 mpmath testfixtures nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/run_NRPy_UnitTests.sh python2
@@ -44,7 +44,7 @@ blocks:
         - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
           commands:
             - pip3 install -U pip setuptools
-            - pip3 install sympy mpmath testfixtures
+            - pip3 install sympy mpmath testfixtures nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/run_NRPy_UnitTests.sh python3
@@ -55,7 +55,7 @@ blocks:
         - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
           commands:
             - pip3 install -U pip setuptools mpmath testfixtures
-            - pip3 install pip install -U git+https://github.com/sympy/sympy/
+            - pip3 install pip install -U git+https://github.com/sympy/sympy/ nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/run_NRPy_UnitTests.sh python3
