semaphore: disable GiR, add S2Fonly

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,11 +25,11 @@ blocks:
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/core_Jupyter_notebook_testsuite_noS2F.sh
-  - name: "GiR JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
+  - name: "S2F JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
     dependencies: []
     task:
       jobs:
-        - name: "GiR JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
+        - name: "S2F JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
           commands:
             - sem-version python 3.8
             - sudo apt-get update
@@ -39,7 +39,22 @@ blocks:
             - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
-            - ./UnitTesting/core_Jupyter_notebook_testsuite_GiRonly.sh
+            - ./UnitTesting/core_Jupyter_notebook_testsuite_S2Fonly.sh
+  # - name: "GiR JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
+  #   dependencies: []
+  #   task:
+  #     jobs:
+  #       - name: "GiR JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
+  #         commands:
+  #           - sem-version python 3.8
+  #           - sudo apt-get update
+  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
+  #           - export PATH=$PATH:/home/semaphore/.local/bin
+  #           - pip3 install -U pip setuptools
+  #           - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
+  #           - git clone https://github.com/zachetienne/nrpytutorial.git
+  #           - cd nrpytutorial
+  #           - ./UnitTesting/core_Jupyter_notebook_testsuite_GiRonly.sh
   - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
     dependencies: []
     task:
