--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -20,11 +20,27 @@ blocks:
           commands:
             - sem-version python 3.8
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
             - python3 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
             - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
+  - name: "JUPYTER NOTEBOOK TESTS: SymPy-1.2 Ubuntu Linux Bionic Python 2.7.18 (oldest SymPy version tested/supported by NRPy+ [ref metric])"
+    dependencies: []
+    task:
+      jobs:
+        - name: "JUPYTER NOTEBOOK TESTS: SymPy-1.2 Ubuntu Linux Bionic Python 2.7.18 (oldest SymPy version tested/supported by NRPy+ [ref metric])"
+          commands:
+            - sem-version python 2.7
+            - sudo apt-get update
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - python2 --version
+            - export PATH=$PATH:/home/semaphore/.local/bin
+            - pip install -U pip setuptools
+            - pip install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
@@ -36,7 +52,7 @@ blocks:
   #         commands:
   #           - sem-version python 3.8
   #           - sudo apt-get update
-  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
+  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
   #           - export PATH=$PATH:/home/semaphore/.local/bin
   #           - pip3 install -U pip setuptools
   #           - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
@@ -51,22 +67,22 @@ blocks:
   #         commands:
   #           - sem-version python 3.8
   #           - sudo apt-get update
-  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
+  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
   #           - export PATH=$PATH:/home/semaphore/.local/bin
   #           - pip3 install -U pip setuptools
   #           - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
   #           - git clone https://github.com/zachetienne/nrpytutorial.git
   #           - cd nrpytutorial
   #           - ./UnitTesting/core_Jupyter_notebook_testsuite_GiRonly.sh
-  - name: "SymPy1.2, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
+  - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
     dependencies: []
     task:
       jobs:
-        - name: "SymPy1.2, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
+        - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
           commands:
             - sem-version python 2.7
             - pip install -U pip setuptools
-            - pip install sympy==1.2 mpmath testfixtures nrpylatex
+            - pip install sympy==1.3 mpmath testfixtures nrpylatex
             - python2 --version
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
@@ -108,7 +124,7 @@ blocks:
           commands:
             # - sem-version python 3.8
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
             - python3 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
@@ -128,7 +144,7 @@ blocks:
           commands:
             # - sem-version python 3.8
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
             - python3 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
